--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Value Sorter</title>
   <link rel="stylesheet" href="styles.css"> <!-- Link to the CSS file -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <style id="backgroundStyle"></style>
 </head>
 <body>
   <div class="container">
